fix navbar overflow

--- a/AdminBundle/Resources/Public/css/navbar-items.less
+++ b/AdminBundle/Resources/Public/css/navbar-items.less
@@ -329,6 +329,7 @@ body.trinity-admin {
   //#headline-on-scroll
   #header-for-nonvisible{
     position: fixed;
+    left: 0;
     height: 50px;
     width: 100%;
 
